--- a/res/layout/activity_aidl.xml
+++ b/res/layout/activity_aidl.xml
@@ -23,5 +23,14 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="object call" />
-
+     <Button
+        android:id="@+id/messengerBindButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="messenger bind" />
+     <Button
+        android:id="@+id/messengerButton"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="messenger call" />
 </LinearLayout>
