add binder pool

--- a/res/xml/preference_activity_main.xml
+++ b/res/xml/preference_activity_main.xml
@@ -329,4 +329,12 @@
             android:targetPackage="com.example.test"
             android:targetClass="com.example.test.handlesystemui.MainActivity" />
     </PreferenceScreen>
+    
+    <PreferenceScreen
+        android:title="Binder pool">
+        <intent
+            android:action="android.intent.action.BINDERPOOL"
+            android:targetPackage="com.example.test"
+            android:targetClass="com.example.test.binderpool.BinderPoolActivity" />
+    </PreferenceScreen>
 </PreferenceScreen>
