--- a/res/layout/activity_location.xml
+++ b/res/layout/activity_location.xml
@@ -7,7 +7,6 @@
     <TextView 
         android:id="@+id/TextView_GpsInfo" 
         android:layout_width="wrap_content" 
-        android:layout_height="wrap_content" 
-        android:text="@string/hello_world" /> 
+        android:layout_height="wrap_content" /> 
  
 </LinearLayout> 
